<resources>
    <string name="app_name">Kotlin_Exercise</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="title">Title</string>
    <string name="project_description">Project Description</string>
    <string name="project">Project</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="my_name">Christian Lloyd B. Salon</string>
</resources>