<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_black2"
    tools:context=".fragments.ProjectDetailsFragment">

    <!-- Project Image -->
    <ImageView
        android:id="@+id/projectImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/projectTitle"/>

    <!-- Project Title -->
    <TextView
        android:id="@+id/projectTitle"
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textColor="@color/my_green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <!-- Project Description -->
    <TextView
        android:id="@+id/projectDescription"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="30dp"
        android:background="@color/my_black1"
        android:text="@string/project_description"
        android:gravity="center"
        android:textColor="@color/my_light_gray"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectTitle"/>

    <Button
        android:text="@string/back"
        android:id="@+id/backBtn"
        android:layout_width="200dp"
        android:textColor="@color/my_black2"
        android:backgroundTint="@color/my_green"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>